# ResearchSwarm

./: CHANGELOG.md  CONTRIBUTING.md  README.md  analysis.ipynb  digital_cognitive_labor_program.md  prepare.py  program.md  pyproject.toml  researchswarm.py  researchswarm_agent.py  researchswarm_memory.py  researchswarm_wiki.py  train.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
AI-Memory/: memory.db
LLM-Wiki/wiki/: index.md  log.md
LLM-Wiki/wiki/optimizers/: batch-a.md  batch-b.md  sample-run.md
tests/: test_researchswarm.py
